fix: jumping scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,3 +45,22 @@ main {
 * {
   -webkit-tap-highlight-color: transparent;
 }
+
+// https://www.zhangxinxu.com/wordpress/2015/01/css-page-scrollbar-toggle-center-no-jumping/
+html {
+  overflow-y: scroll;
+}
+
+:root {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+:root body {
+  position: absolute;
+}
+
+body {
+  width: 100vw;
+  overflow: hidden;
+}
